@@ -7,15 +7,13 @@
     <td><img src="{{ symbol_url }}"/>&nbsp;</td>
     {% if add_snippet %}
     <td class="sidebarbox-action-icon">
-      {% with display_object.header as header %}
       <a href=""
          class="add-snippet ss_chart_line_add ss_sprite"
          data-workspace-id="{{ display_object.workspace_item.workspace.id }}"
          data-workspace-item-id="{{ display_object.workspace_item.id }}"
          data-item-identifier='{{ display_object.identifier|json_escaped }}'
          data-item-shortname="{{ display_object.shortname }}"
-         data-item-name="{{ header.name }}"></a>
-      {% endwith %}
+         data-item-name="{{ display_object.name }}"></a>
     </td>
     {% endif %}
   </tr>
